force-app/main/default/objects/Email_Reminder__c/Email_Reminder__c.object-meta.xml
<CustomObject>
    <label>Email Reminder</label>
    <nameField>
        <label>Reminder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Reminders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>