force-app/main/default/objects/Email_Reminder__c/fields/Additional_Send_To__c.field-meta.xml
<CustomField>
    <fullName>Additional_Send_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional - Send To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Email_Reminders</relationshipName>
    <type>Lookup</type>
</CustomField>