force-app/main/default/objects/Email_Reminder__c/fields/Alert_Date__c.field-meta.xml
<CustomField>
    <fullName>Alert_Date__c</fullName>
    <label>Alert Date</label>
    <type>DateTime</type>
</CustomField>