force-app/main/default/objects/Email_Reminder__c/fields/File_s__c.field-meta.xml
<CustomField>
    <fullName>File_s__c</fullName>
    <label>File(s)</label>
    <type>Url</type>
</CustomField>