force-app/main/default/objects/Email_Reminder__c/fields/Send_Reminder_To__c.field-meta.xml
<CustomField>
    <fullName>Send_Reminder_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Send Reminder To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reminders</relationshipName>
    <type>Lookup</type>
</CustomField>