force-app/main/default/objects/Email_Reminder__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kick-off Meeting - Date Confirmed</fullName>
            </value>
            <value>
                <fullName>Kick-off Meeting - Invite Accepted</fullName>
            </value>
            <value>
                <fullName>Client Confirmed Resources and Materials</fullName>
            </value>
            <value>
                <fullName>Writer Offer</fullName>
            </value>
            <value>
                <fullName>Writer Agreement</fullName>
            </value>
            <value>
                <fullName>Interview Request</fullName>
            </value>
            <value>
                <fullName>Interview Commitment</fullName>
            </value>
            <value>
                <fullName>Interview Invitation Accepted</fullName>
            </value>
            <value>
                <fullName>Outline - Changes</fullName>
            </value>
            <value>
                <fullName>Outline - Approval</fullName>
            </value>
            <value>
                <fullName>Quote Approval</fullName>
            </value>
            <value>
                <fullName>Consent &amp; Release Form</fullName>
            </value>
            <value>
                <fullName>Design PDF - Revisions</fullName>
            </value>
            <value>
                <fullName>Design PDF - Approval</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>